syntax = "proto3";

package com.example.internalapi.request.reservation.delete.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/reservation.proto";
import "com/example/internalapi/model/error/error.proto";

message CancelReservationRequest {
  string user_id = 1;
  string book_id = 2;
}

message CancelReservationResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {

  }

  message Failure {
    string message = 100;
  }
}
