syntax = "proto3";

package com.example.internalapi;

import "com/example/internalapi/input/reqreply/reservation/delete.proto";

service DeleteReservationService {
  rpc deleteReservation(com.example.internalapi.request.reservation.delete.proto.CancelReservationRequest)
      returns (com.example.internalapi.request.reservation.delete.proto.CancelReservationResponse);
}
